# bkp-backend

./: .gitignore  Makefile  README.md  backup.sh  pyproject.toml  requirements.txt
backup/: __init__.py  backup  engine.py  main.py
backup/databases/: __init__.py  database.py
backup/engines/: __init__.py  engine.py  local_psql_engine.py  mysql_engine.py  psql_engine.py  server_mysql_engine.py
backup/entities/: __init__.py  backup.py  relatory.py
backup/forms/: backup_form.py
backup/queries/: __init__.py  backup_query.py  device_query.py  frequency_query.py  relatory_query.py
backup/repositories/: __init__.py  backup_repository.py  frequency_repository.py  os_repository.py  relatory_repository.py
